# sungai

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .sungai_ignore  .travis.yml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.sh  test_precommit.py
.github/workflows/: tests.yaml
src/: __init__.py  main.py  sungai.py
sungai/: __init__.py  sungai.py
tests/: .test_sungai_ignore  test_sungai.py
