[project]
name = "sungai"
version = "0.1.6"
description = "Sungai is a directory rating tool"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Hugo Cartwright", email = "hugo.cartw@gmail.com"}
]
maintainers = [
  {name = "Hugo Cartwright", email = "hugo.cartw@gmail.com"}
]
keywords = ["Python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities"
]

dependencies = [
  "numpy==1.26.0",
  "gitignore_parser==0.1.9"
]

[project.urls]
source = "https://github.com/hugocartwright/sungai.git"

[project.scripts]
sungai = "sungai:run_sungai"

[build-system]
requires = ["setuptools>=67.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "0.1.6"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"setup.py" = ['"version": "{version}"']
"sungai/__init__.py" = ['__version__ = "{version}"']
